--- a/src/main/res/layout/fragment_log_in.xml
+++ b/src/main/res/layout/fragment_log_in.xml
@@ -37,10 +37,13 @@
 
             <Button
                 android:id="@+id/bLogIn"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Log in" />
+                android:background="#0097A7"
+                android:layout_margin="20dp"
+                android:text="Log in"
+                android:textColor="#FFFFFF"
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/orRegisterNewProfileOption"
