--- a/src/main/res/layout/fragment_register_user.xml
+++ b/src/main/res/layout/fragment_register_user.xml
@@ -44,10 +44,13 @@
 
             <Button
                 android:id="@+id/bCreateProfile"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="Create Profile"
-                android:layout_marginTop="20dp"/>
+                android:background="#0097A7"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/tvLogInOption"
