--- a/src/main/res/layout/fragment_start_page.xml
+++ b/src/main/res/layout/fragment_start_page.xml
@@ -62,7 +62,8 @@
                 android:text="Log in"
                 android:layout_marginBottom="20dp"
                 android:layout_gravity="center"
-                android:background="#B3E5FC"/>
+                android:textColor="#FFFFFF"
+                android:background="#0097A7"/>
 
             <Button
                 android:id="@+id/bAbout"
@@ -70,7 +71,8 @@
                 android:layout_height="40dp"
                 android:text="About the app"
                 android:layout_gravity="center"
-                android:background="#B3E5FC"/>
+                android:textColor="#FFFFFF"
+                android:background="#0097A7"/>
 
         </LinearLayout>
 
