--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0097A7</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#0097A7</color>
+    <color name="colorSelected">#B2EBF2</color>
 </resources>
