--- a/src/main/res/layout/fragment_next_video.xml
+++ b/src/main/res/layout/fragment_next_video.xml
@@ -2,15 +2,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.faars.promise30.Fragments.NextVideoFragment">
+    tools:context="com.example.faars.promise30.Fragments.NextVideoFragment"
+    android:background="#FFFFFF">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Next Video"
-        android:gravity="center"
-        android:textSize="35dp"
-        android:textStyle="bold"/>
+        android:layout_margin="10dp"
+        android:background="#FFFFFF">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next Video"
+            android:textSize="17dp"
+            android:textStyle="bold"
+            android:id="@+id/textView3" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/next_video"
+            android:layout_centerInParent="true"
+            android:id="@+id/imageView" />
+
+    </RelativeLayout>
+
 
 </FrameLayout>
