--- a/src/main/res/layout/fragment_register_child.xml
+++ b/src/main/res/layout/fragment_register_child.xml
@@ -86,34 +86,12 @@
             android:layout_below="@id/et_hospital_id"/>
 
         <TextView
-            android:id="@+id/tv_api_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text="API-key"
-            android:textSize="15dp"
-            android:layout_below="@id/tv_country"/>
-        <TextView
-            android:id="@+id/et_api_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text="API-key"
-            android:textSize="15dp"
-            android:layout_below="@id/et_country"
-            android:layout_toRightOf="@id/tv_hospital_id"/>
-
-        <TextView
             android:id="@+id/tv_first_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_api_key"
+            android:layout_below="@id/tv_country"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="10dp"
             android:text="Child's user name"
             android:textSize="15dp" />
