--- a/src/main/res/layout/fragment_edit_child.xml
+++ b/src/main/res/layout/fragment_edit_child.xml
@@ -112,7 +112,7 @@
             android:layout_below="@id/tv_term_date_edit"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:editable="true"/>
+            android:editable="false"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
