--- a/src/main/res/layout/fragment_new_video.xml
+++ b/src/main/res/layout/fragment_new_video.xml
@@ -28,7 +28,7 @@
                 android:src="@drawable/demo_screenshot" />
 
             <ImageView
-                android:id="@+id/play_intruct_video"
+                android:id="@+id/play_instruct_video"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/play2"
