--- a/src/main/res/layout/fragment_instruction_video.xml
+++ b/src/main/res/layout/fragment_instruction_video.xml
@@ -3,22 +3,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.faars.promise30.Fragments.InstructionVideoFragment"
-    android:background="#000000">
+    tools:context="com.example.faars.promise30.Fragments.InstructionVideoFragment">
 
-    <VideoView
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:id="@+id/VideoView"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="center" />
-
-    <MediaController
-        android:id="@+id/mediaController1"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="Instruction video:"
+        android:layout_margin="20dp"
+        android:textSize="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/demo_screenshot2"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:src="@drawable/demo_screenshot" />
+
+            <ImageView
+                android:id="@+id/play_instruct_video2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/play2"
+                android:padding="20dp"
+                android:layout_centerInParent="true"
+                android:clickable="true"/>
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/newVideoButton"
+            android:layout_width="200dp"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Take a new video now"
+            android:visibility="gone"/>
+
+    </LinearLayout>
+
 
 
 </FrameLayout>
