--- a/src/main/res/layout/fragment_feedback.xml
+++ b/src/main/res/layout/fragment_feedback.xml
@@ -4,13 +4,35 @@
     android:layout_height="match_parent"
     tools:context="com.example.faars.promise30.Fragments.FeedbackFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Feedback"
-        android:gravity="center"
-        android:textSize="35dp"
-        android:textStyle="bold"/>
+        android:orientation="vertical"
+        android:layout_margin="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submitted Videos"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:id="@+id/no_videos_sent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="No Videos sent"
+            android:textSize="16dp"
+            android:visibility="gone"/>
+
+        <ListView
+            android:id="@+id/lvVideosSent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:divider="@color/colorPrimary"
+            android:dividerHeight="1dp"/>
+
+    </LinearLayout>
 
 </FrameLayout>
