--- a/src/main/res/layout/fragment_my_videos.xml
+++ b/src/main/res/layout/fragment_my_videos.xml
@@ -14,15 +14,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My videos:"
-            android:textStyle="bold"
             android:textSize="20dp"
-            android:layout_marginBottom="40dp"/>
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:id="@+id/no_videos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No Videos taken"
+            android:layout_marginTop="10dp"
             android:textSize="16dp"
             android:visibility="gone"/>
 
