--- a/src/main/res/layout/fragment_review_video.xml
+++ b/src/main/res/layout/fragment_review_video.xml
@@ -43,7 +43,7 @@
             android:background="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:text="Continue"
+            android:text="Approve"
             android:layout_height="wrap_content" />
 
 
