--- a/src/main/res/layout/my_list_view.xml
+++ b/src/main/res/layout/my_list_view.xml
@@ -7,7 +7,9 @@
         <ImageView
             android:id="@+id/thumbnail"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/text1"
@@ -17,7 +19,9 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:textSize="18dp"
-            android:gravity="center_vertical"/>
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
     </TableRow>
 </TableLayout>
