Straight to create profile and register new child, when the tables are empty + other minor improvements from going through test form for the fist time

--- a/src/main/res/layout/fragment_register_user.xml
+++ b/src/main/res/layout/fragment_register_user.xml
@@ -61,7 +61,7 @@
                 android:textStyle="bold"
                 android:padding="16dp"
                 android:clickable="true"
-                android:textColor="#2979FF" />
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
 
