--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#0097A7</color>
     <color name="colorSelected">#B2EBF2</color>
+    <color name="colorInactive">#E0E0E0</color>
 </resources>
