--- a/src/main/res/layout/fragment_faq.xml
+++ b/src/main/res/layout/fragment_faq.xml
@@ -8,26 +8,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/show_answer_1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/pluss"
-                android:layout_marginRight="5dp"/>
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_add_circle_outline_24dp"
+                android:padding="5dp"/>
 
             <TextView android:id="@+id/question1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
                 android:text="Where can I find more information about the project or the analysis?"
                 android:textSize="17dp"
+                android:textColor="@color/textColor"
                 android:layout_gravity="center_vertical"/>
 
         </LinearLayout>
@@ -36,29 +35,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
-            android:layout_marginLeft="45dp"
+            android:layout_marginLeft="35dp"
             android:layout_marginRight="20dp"
-            android:hint="See the home page of the research group: www.sto.no/cerebralpalsygroup"
+            android:layout_marginTop="10dp"
+            android:textColor="#616161"
+            android:text="See the home page of the research group: \nwww.sto.no/cerebralpalsygroup"
             android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            android:layout_marginTop="20dp">
 
             <ImageView
                 android:id="@+id/show_answer_2"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/pluss"
-                android:layout_marginRight="5dp"/>
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_add_circle_outline_24dp"
+                android:padding="5dp"/>
 
             <TextView android:id="@+id/question2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:textColor="#000000"
                 android:text="Why am I told to take two videos?"
+                android:textColor="@color/textColor"
                 android:layout_gravity="center_vertical"/>
 
         </LinearLayout>
@@ -67,9 +68,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
-            android:layout_marginLeft="45dp"
+            android:layout_marginLeft="35dp"
             android:layout_marginRight="20dp"
-            android:hint="Some times we will ask the participants to take another video. This is
+            android:layout_marginTop="5dp"
+            android:textColor="#616161"
+            android:text="Some times we will ask the participants to take another video. This is
 because the first video, for various reasons, was inadequate. Therefor, we need another video to
 go through with the analysis."
             android:visibility="gone"/>
@@ -77,21 +80,22 @@ go through with the analysis."
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            android:layout_marginTop="20dp">
 
             <ImageView
                 android:id="@+id/show_answer_3"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/pluss"
-                android:layout_marginRight="5dp"/>
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_add_circle_outline_24dp"
+                android:padding="5dp"/>
 
             <TextView android:id="@+id/question3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="What do I do if I can't take a 3-minute video of my child which satisfies the given criteria? "
                 android:textSize="17dp"
-                android:textColor="#000000"
+                android:textColor="@color/textColor"
+                android:layout_marginRight="10dp"
                 android:layout_gravity="center_vertical"/>
 
         </LinearLayout>
@@ -100,9 +104,11 @@ go through with the analysis."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
-            android:layout_marginLeft="45dp"
+            android:layout_marginLeft="35dp"
             android:layout_marginRight="20dp"
-            android:hint="Send us the longest video you have. If the video is less than 1 minute,
+            android:layout_marginTop="10dp"
+            android:textColor="#616161"
+            android:text="Send us the longest video you have. If the video is less than 1 minute,
 there is little chance that we can get an assessment. In that case we will contact you."
             android:visibility="gone"/>
 
