--- a/src/main/res/layout/fragment_new_video.xml
+++ b/src/main/res/layout/fragment_new_video.xml
@@ -5,10 +5,12 @@
     tools:context="com.example.faars.promise30.Fragments.NewVideoFragment">
 
     <TextView
+        android:id="@+id/title_new_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Instruction video:"
+        android:text="Instruction video"
         android:layout_margin="20dp"
+        android:visibility="gone"
         android:textSize="20dp"/>
 
     <LinearLayout
@@ -25,6 +27,7 @@
                 android:id="@+id/demo_screenshot"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
+                android:visibility="gone"
                 android:src="@drawable/demo_screenshot" />
 
             <ImageView
@@ -34,6 +37,7 @@
                 android:src="@drawable/play2"
                 android:padding="20dp"
                 android:layout_centerInParent="true"
+                android:visibility="gone"
                 android:clickable="true"/>
         </RelativeLayout>
 
@@ -43,11 +47,22 @@
             android:background="@color/colorPrimary"
             android:textColor="#FFFFFF"
             android:layout_marginTop="30dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Continue"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_new_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:textSize="18dp"
+        android:text="Outside the timezone for new video, \nsee ''Next video''"
+        android:layout_gravity="center"/>
 
 
 </FrameLayout>
