--- a/src/main/res/layout/fragment_next_video.xml
+++ b/src/main/res/layout/fragment_next_video.xml
@@ -8,23 +8,21 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:background="#FFFFFF">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next Video:"
-            android:layout_marginTop="10dp"
-            android:textSize="17dp"
-            android:textStyle="bold"
+            android:text="Next Video"
+            android:textSize="20dp"
             android:id="@+id/textView3" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="in 4 weeks and 5 days"
-            android:textSize="17dp"
+            android:textSize="18dp"
             android:layout_marginTop="40dp"
             android:id="@+id/countdown"
             android:layout_below="@id/textView3"/>
