--- a/src/main/res/layout/fragment_read_qrcode.xml
+++ b/src/main/res/layout/fragment_read_qrcode.xml
@@ -12,8 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Register a new child:"
-            android:textStyle="bold"
+            android:text="Register a new child"
             android:textSize="25dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
