--- a/src/main/res/layout/fragment_recap_info.xml
+++ b/src/main/res/layout/fragment_recap_info.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Check points:"
+            android:text="Consider these subjects before starting to film: "
             android:textSize="20dp"
             android:layout_marginBottom="40dp"/>
 
