--- a/src/main/res/menu/activity_main_drawer.xml
+++ b/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_instruction"
             android:icon="@drawable/ic_ondemand_video_black_24px"
-            android:title="Instruction Video" />
+            android:title="Instruction video" />
         <item
             android:id="@+id/nav_next_video"
             android:icon="@drawable/ic_event_available_black_24px"
@@ -33,15 +33,15 @@
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_call_black_24px"
-            android:title="Contact Us" />
+            android:title="Contact us" />
         <item
             android:id="@+id/nav_choose_child"
             android:icon="@drawable/ic_child_care_black_24px"
-            android:title="Choose Child" />
+            android:title="Choose child" />
         <item
             android:id="@+id/nav_log_out"
             android:icon="@drawable/ic_exit_to_app_24dp"
-            android:title="Log Out" />
+            android:title="Log out" />
 
     </group>
 </menu>
